@@ -5,6 +5,7 @@ version 1.1-beta2 xx - 2011
 . [FIX] Node: orderOfArrival is @synthezied correctly (issue #1273)
 . [FIX] Node & Sprite: Scale before Skew to prevent issues with negatives scales.
 . [FIX] TouchDispatcher: correctly handles addition and removal of handlers when being inside a touch handler (issue #1084, #1139)
+. [FIX] EAGLView: always destroy and recreate OpenGL buffers completely (issue #1254) 
 . [FIX-MAC] LabelTTF: word wrap works on Mac (issue #1074)
 
 version 1.1-beta 11-Oct-2011
